# gMTP

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  pkginfo  postinstall  prototype
images/: Makefile  Makefile.am  Makefile.in
misc/: Makefile  Makefile.am  Makefile.in  org.gnome.gmtp.gschema.xml
po/: ChangeLog  LINGUAS  Makefile  Makefile.am  Makefile.in  Makevars  POTFILES  POTFILES.in  da.gmo  da.po  da.po~  de.gmo  de.po  de.po~  en_AU.gmo  en_AU.po  en_AU.po~  es.gmo  es.po  es.po~  fr.gmo  fr.po  fr.po~  gmtp.pot  it.gmo  it.po  new_da.po  new_de.po  new_es.po  new_fr.po  new_it.po  ru.gmo  ru.po
src/: Makefile.am  Makefile.in  about.c  about.h  albumart.c  albumart.h  callbacks.c  callbacks.h  dnd.c  dnd.h  formatdevice.c  formatdevice.h  interface.c  interface.h  main.c  main.h  metatag_info.c  metatag_info.h  mtp.c  mtp.h  playlist.c  playlist.h  preferences.c  preferences.h  prefs.c  prefs.h  progress.c  progress.h  properties.c  properties.h
web/: downloads.html  features.html  index.html  usage.html
web/css/: style.css
web/misc/: id3tag.pc  libusb.pc
