# Application icons

gmtpdir = $(datadir)/gmtp
gmtp_DATA = \
	audio-x-mp3-playlist.png \
	audio-x-mpeg.png \
	empty.png \
	folder.png  \
	gmtpicon.png \
	icon-16.png \
	image-x-generic.png \
	logo.png \
	media-cdrom-audio.png \
	stock-about-16.png \
	text-plain.png \
	video-x-generic.png \
	view-refresh.png 

#Desktop shortcut icon.

icondir = $(datadir)/pixmaps
icon_DATA = \
	gmtpicon.png

EXTRA_DIST = \
	audio-x-mp3-playlist.png \
	audio-x-mpeg.png \
	empty.png \
	folder.png  \
	gmtpicon.png \
	icon-16.png \
	image-x-generic.png \
	logo.png \
	media-cdrom-audio.png \
	stock-about-16.png \
	text-plain.png \
	video-x-generic.png \
	view-refresh.png 
